# docKar

./: .gitignore  .gitmodules  Makefile  generate.py  pyproject.toml  requirements-build.txt
docKar/: generate.py
ecus/cangen/: Dockerfile
ecus/cannelloni/: Dockerfile
src/: args.py  car.py  compose.py  menu.py  util.py
virtual_vehicle/: __main__.py
virtual_vehicle/ecu_template/: test.py
