[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-vehicle"
version = "0.0.1"
authors = [
    {name = "Lovro Grgurić Mileusnić", email = "lovrogm@gmail.com"}
]
requires-python = ">=3.9"


[project.scripts]
vehicle-gen = "virtual_vehicle.generate:main"